# filesystem-client

./: CMakeLists.txt
qml/: Breadcrumb.qml  BreadcrumbButton.qml  ConnectDialog.qml  DataExplorer.qml  DataTable.qml  Main.qml
src/: main.cpp
src/core/: appinitializer.cpp  appinitializer.h  constants.h  dispatcher.cpp  dispatcher.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h
src/models/: client.h  clientexplorermodel.cpp  clientexplorermodel.h  clientinfo.h  fileexplorermodel.cpp  fileexplorermodel.h  fileinfo.h  localclient.h  remoteclient.h
src/network/: constants.h  iconnection.h  protocol.h  protocoltypes.h  serialization.h
src/services/: explorerdataprovider.cpp  explorerdataprovider.h  idgenerator.cpp  idgenerator.h  localdirectoryinfoprovider.cpp  localdirectoryinfoprovider.h  localfileinfoprovider.cpp  localfileinfoprovider.h  serialization.h
src/viewmodels/: breadcrumbviewmodel.cpp  breadcrumbviewmodel.h  connectdialogviewmodel.cpp  connectdialogviewmodel.h  dataexplorerviewmodel.cpp  dataexplorerviewmodel.h  mainviewmodel.h
